--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,3 +30,40 @@
     -webkit-line-clamp: 3;
   }
 }
+
+/* Custom radio button styling with white border */
+input[type="radio"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 1rem;
+  height: 1rem;
+  border: 2px solid white;
+  border-radius: 50%;
+  background-color: white;
+  cursor: pointer;
+  position: relative;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
+}
+
+input[type="radio"]:checked {
+  background-color: #EF7722;
+  border: 2px solid white;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
+}
+
+input[type="radio"]:checked::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 0.375rem;
+  height: 0.375rem;
+  border-radius: 50%;
+  background-color: white;
+}
+
+input[type="checkbox"] {
+  accent-color: #EF7722;
+}
